# repo-newz

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  pyproject.toml  repo-newz
.claude/: settings.local.json
scripts/: failure-drill.sh
src/repo_newz/: __main__.py  cli.py  config.py  errors.py  github.py  hugo.py  obsidian.py  render.py  slack.py  summarize.py
templates/: repo-activity.md.j2
tests/: test_config.py  test_github.py  test_hugo.py  test_obsidian.py  test_render.py  test_slack.py  test_summarize.py
