[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-newz"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
repo-newz = "repo_newz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_newz"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
